public/css/powdahound.css
@media (min-width: 48em) {
  .sidebar {
    width: 16rem;
  }
}

.sidebar-about h1 {
  font-family: "PT Sans", Helvetica, Arial, sans-serif;
  font-size: 1.75rem;
}

.sidebar-about h1 span {
  display: inline-block;
  position: relative;
  top: 0.2rem;
}

.lead {
  font-size: 1rem;
}

.copyright {
  font-size: 0.5rem;
}

/* Color theme */
.theme-powdahound .sidebar {
  background-color: #336699;
}
.theme-powdahound .content a,
.theme-powdahound .related-posts li a:hover {
  color: #336699;
}

/* Captioned images */
figure {
  margin: 1.5rem;
}
figure img {
  margin: 0 auto 0.2em auto;
}
figcaption {
  font-size: 0.7rem;
  text-align: center;
}

/* Snowflake list items in posts */
.post ul {
  list-style: none;
  padding-left: 1.8rem;
  text-indent: -1.2rem;
}

.post ul li:before {
  content: "\2744";
  display: block;
  float: left;
  width: 1.2rem;
}

